syntax = "proto3";

package wallet.v1;

option go_package = "github.com/toxanetoxa/selesa-slots/api/walletv1;walletv1";

service WalletService {
  rpc GetBalance(GetBalanceRequest) returns (GetBalanceResponse);
}

message GetBalanceRequest {
  int64 user_id = 1;
}

message GetBalanceResponse {
  int64 user_id = 1;
  int64 balance = 2;
}